added Watchdog to README and logwatch.py

--- a/README
+++ b/README
@@ -28,3 +28,4 @@ Technologies Used
 * Qt5: https://qt.io/
 * PyQt5: https://www.riverbankcomputing.com/software/pyqt/download5
 * Python 3: https://pythong.org/
+* Watchdog: https://pypi.python.org/pypi/watchdog
